<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Career Fair</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="search_title">search</string>
    <string name="rose_logo">Rose Logo</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_company">CompanyActivity</string>
    <string name="looking_for">Looking For:</string>
    <string name="majors">Majors:</string>
    <string name="intern">Intern</string>
    <string name="full_time">Full Time</string>
    <string name="submit">Submit</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="interview_date">Interview Date</string>
    <string name="interview_time">Interview Time</string>
    <string name="notes">Notes</string>
    <string name="schedule_interview">Schedule Interview</string>
    <string name="interview">Interview</string>
    <string name="title_activity_login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="info">Info</string>
    <string name="favorites">Favorites</string>
    <string name="interviews">Show Interviews</string>
    <string name="company_logo">Company Logo</string>
    <string name="submit_wait_time">Submit Wait Time</string>
    <string name="wait_time">Wait Time</string>
    <string name="radio_short">Short</string>
    <string name="radio_medium">Medium</string>
    <string name="radio_long">Long</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="save_notes">Save Notes</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading...</string>
    <string name="short_line">Short Line</string>
    <string name="medium_line">Medium Line</string>
    <string name="long_line">Long Line</string>
    <string name="unknown">Unknown</string>
    <string name="title_activity_interviews">InterviewsActivity</string>
    <string name="account">Account</string>
    <string name="na">N/A</string>
    <string name="az">A-Z</string>
    <string name="za">Z-A</string>
    <string name="table">Table</string>
    <string name="table_start">Table N/A</string>
    <string name="website">Website</string>
    <string name="sort">Sort</string>
    <string name="help">Help</string>
    <string name="profile_help_text">Add or remove a favorite by long pressing on a company in the main menu!</string>

</resources>
