<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/rose_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/map_button"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="45dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/rose_logo"
        android:src="@drawable/rose_logo" />
    
    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/map" />
    
    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/search" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/search_button"
        android:layout_marginTop="20dp"
        android:text="@string/profile" />

    <Button
        android:id="@+id/company_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/title_activity_company" />

</RelativeLayout>
