<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

       <RadioButton
           android:id="@+id/radio_short"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:checked="true"
           android:text="@string/radio_short" />

       <RadioButton
           android:id="@+id/radio_medium"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/radio_medium" />

       <RadioButton
           android:id="@+id/radio_long"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/radio_long" />

</RadioGroup>
