<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="44dp"
	android:orientation="horizontal" >
    <TextView android:id="@+id/company_name_view"
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
    	android:layout_alignParentLeft="true"
    	android:text="@string/hello_world"
    	android:textSize="24sp"
    	/>

    <Button
        android:id="@+id/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/company_name_view"
        android:text="@string/info"/>"

    <Button
        android:id="@+id/notes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/info_button"
        android:text="@string/notes" />

</RelativeLayout>
